  * Altered all uses of port-read-fn to include quantity arguments.
  * Added mqo_flush_buffer and flush-buffer

- ?/??/????, MOSREF Compose Module
  * Added (path-mtime path) -> integer to prims/os
  * Added (file-path? path) -> #t or #f
  * Added (path-join string ..) -> string to lib/core
  * Added (convert-path string) -> string to lib/core
  + Added (read-data-file path) -> string to lib/core
  * Added (path-exists? path) -> #t or #f to prims/os
  * Added (member item list) -> #t or #f to prims/core
  * Added lib/build
  * Added (build-module module) -> string to lib/build
  * Added (build-dependencies module) to lib/build
  + Added (build-exe platform module) -> string to lib/build 
  + Added (build-drone platform console-key console-host console-portno)

- 3/12/2006, MOSREF Control Module
  * Added (open-buffer-port) -> port to lib/core
  * Added (fuse-ports read-port write-port) -> port
  * Added (drone-affiliation console-ecdh port) -> port
  * Added (console-affiliation console-ecdh port) -> port
  * Added affiliation unit test

- 3/11/2006, Filter Ports and Crypto Filters
  * Added the lib/filter module
  * Added filter-output, filter-input and filter-port to lib/filter
  * Added the lib/crypto-port module
  * Added the buffer-empty? primitive.
  * Modified make-buffer to make capacity optional
  * Added the crypto-port test suite.
  * Added buffer-skip primitive.

- 5/08/2006, Integration of ECDH cipher from LibTomCrypt
  * Added (random? value) -> #t or #f
  * Added mqo_ecdh_key subtype of mqo_key
  * Added (make-ecdh-key key-size data) -> ecdh-key
  * Added (import-ecdh data) -> ecdh-key
  * Added (export-public-ecdh key) -> string
  * Added (export-private-ecdh key) -> string
  * Added (ecdh-shared-secret local remote) -> string
  * Added (ecdh-key? value) -> #t or #f
  * Added (ecdh-public-key? value) -> #t or #f
  * Added (ecdh-private-key? value) -> #t or #f
  * Added tests for AES, XOR, BASE64, ECDH to test/crypto
